--- a/Predict PULSAR.ipynb
+++ b/Predict PULSAR.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset is downloaded from [Kaggle](https://www.kaggle.com/pavanraj159/predicting-a-pulsar-star) containing the sample pulsar candidates collected. By [Universe Today](https://www.universetoday.com/25376/pulsars/), the PULSAR stars are known as the \"lighthouses\" - rotating neutron stars that emit a focused beam of electromagnetic radiation that is only visible if you’re standing in it’s path. "
+    "The dataset is downloaded from [Kaggle](https://www.kaggle.com/pavanraj159/predicting-a-pulsar-star) containing the sample pulsar candidates collected. By [Universe Today](https://www.universetoday.com/25376/pulsars/), the PULSAR stars are known as the \"lighthouses\" - rotating neutron stars that emit a focused beam of electromagnetic radiation that is only visible if you’re standing in it’s [sic] path. "
    ]
   },
   {
